@@ -1,167 +1,231 @@
 <refentry xmlns="http://docbook.org/ns/docbook" version="5.0" xml:id="mater">
 
-<refmeta>
-  <refentrytitle>MATER</refentrytitle>
-  <manvolnum>nged</manvolnum>
-  <refmiscinfo class="source">BRL-CAD</refmiscinfo>
-  <refmiscinfo class="manual">BRL-CAD User Commands</refmiscinfo>
-</refmeta>
+  <refmeta>
+    <refentrytitle>MATER</refentrytitle>
+    <manvolnum>nged</manvolnum>
+    <refmiscinfo class="source">BRL-CAD</refmiscinfo>
+    <refmiscinfo class="manual">BRL-CAD User Commands</refmiscinfo>
+  </refmeta>
 
-<refnamediv xml:id="name">
-  <refname>mater</refname>
-  <refpurpose>Assigns shader parameters, RGB color, and inheritance to an
-	existing combination.
-   </refpurpose>
-</refnamediv>
+  <refnamediv xml:id="name">
+    <refname>mater</refname>
+    <refpurpose>Assigns shader parameters, RGB color, and inheritance to an
+    existing combination.
+    </refpurpose>
+  </refnamediv>
 
-<!-- body begins here -->
-<refsynopsisdiv xml:id="synopsis">
-  <cmdsynopsis sepchar=" ">
-    <command>mater</command>
+  <!-- body begins here -->
+  <refsynopsisdiv xml:id="synopsis">
+    <cmdsynopsis sepchar=" ">
+      <command>mater</command>
+      <arg choice="opt" rep="norepeat">-s</arg>
+      <arg choice="req" rep="norepeat"><replaceable>combination</replaceable></arg>
+      <arg choice="opt" rep="norepeat">shader_parameters <arg choice="opt" rep="norepeat">RGB <arg choice="opt" rep="norepeat">inheritance</arg></arg></arg>
+    </cmdsynopsis>
+    <cmdsynopsis sepchar=" ">
+      <command>mater</command>
+      <arg choice="req" rep="norepeat">-m</arg>
+      <arg choice="req" rep="norepeat"><replaceable>density_file</replaceable></arg>
+      <arg choice="opt" rep="norepeat">map_file</arg>
+    </cmdsynopsis>
+    <cmdsynopsis sepchar=" ">
+      <command>mater</command>
+      <arg choice="req" rep="norepeat">-m</arg>
+      <arg choice="req" rep="norepeat">--names-from-ids</arg>
+      <arg choice="req" rep="norepeat"><replaceable>density_file</replaceable></arg>
+    </cmdsynopsis>
+  </refsynopsisdiv>
 
-    <arg choice="req" rep="norepeat"><replaceable>combination</replaceable></arg>
-    <arg choice="opt" rep="norepeat">shader_parameters <arg choice="opt" rep="norepeat">RGB <arg choice="opt" rep="norepeat">inheritance</arg></arg></arg>
-  </cmdsynopsis>
-</refsynopsisdiv>
+  <refsection xml:id="description"><title>DESCRIPTION</title>
 
-<refsection xml:id="description"><title>DESCRIPTION</title>
-
-  <para>Assigns shader parameters, RGB color, and inheritance to an
-existing combination. The information may be included on the command line;
-otherwise the user will be prompted for it. Some available shaders are:
+  <para>In its default mode, <command>mater</command> assigns shader parameters, RGB color, and inheritance to an
+  existing combination. The information may be included on the command line;
+  otherwise the user will be prompted for it. Some available shaders are:
   </para>
-<itemizedlist mark="bullet">
-<listitem>
-<para>bump -- bump maps.
-</para>
-</listitem>
-<listitem>
-<para>bwtexture -- black and white texture maps.
-</para>
-</listitem>
-<listitem>
-<para>camo -- camouflage.
-</para>
-</listitem>
-<listitem>
-<para>checker -- checkerboard design.
-</para>
-</listitem>
-<listitem>
-<para>cloud -- 2D Geoffrey Gardner style cloud texture map.
-</para>
-</listitem>
-<listitem>
-<para>envmap -- environment mapping.
-</para>
-</listitem>
-<listitem>
-<para>fakestar -- a fake star pattern.
-</para>
-</listitem>
-<listitem>
-<para>fbmbump -- fbm noise applied to surface normal.
-</para>
-</listitem>
-<listitem>
-<para>fbmcolor -- fbm noise applied to color.
-</para>
-</listitem>
-<listitem>
-<para>fire -- flames simulated with turbulence noise.
-</para>
-</listitem>
-<listitem>
-<para>glass -- Phong shader with values set to simulate glass.
-</para>
-</listitem>
-<listitem>
-<para>gravel -- turbulence noise applied to color and surface normal.
-</para>
-</listitem>
-<listitem>
-<para>light -- light source.
-</para>
-</listitem>
-<listitem>
-<para>marble -- marble texture.
-</para>
-</listitem>
-<listitem>
-<para>mirror -- Phong shader with values set to simulate mirror.
-</para>
-</listitem>
-<listitem>
-<para>plastic -- Phong shader with values set to simulate plastic.
-</para>
-</listitem>
-<listitem>
-<para>rtrans -- random transparency.
-</para>
-</listitem>
-<listitem>
-<para>scloud -- 3D cloud shader.
-</para>
-</listitem>
-<listitem>
-<para>spm -- spherical texture maps.
-</para>
-</listitem>
-<listitem>
-<para>stack -- allows stacking of shaders.
-</para>
-</listitem>
-<listitem>
-<para>stxt -- shape texture mapping.
-</para>
-</listitem>
-<listitem>
-<para>texture -- full color texture mapping.
-</para>
-</listitem>
-<listitem>
-<para>turbump -- turbulence noise applied to surface normals.
-</para>
-</listitem>
-<listitem>
-<para>turcolor -- turbulence noise applied to color.
-</para>
-</listitem>
-<listitem>
-<para>wood -- wood texture.
-</para>
-</listitem>
-</itemizedlist>
+  <itemizedlist mark="bullet">
+    <listitem>
+      <para>bump -- bump maps.
+      </para>
+    </listitem>
+    <listitem>
+      <para>bwtexture -- black and white texture maps.
+      </para>
+    </listitem>
+    <listitem>
+      <para>camo -- camouflage.
+      </para>
+    </listitem>
+    <listitem>
+      <para>checker -- checkerboard design.
+      </para>
+    </listitem>
+    <listitem>
+      <para>cloud -- 2D Geoffrey Gardner style cloud texture map.
+      </para>
+    </listitem>
+    <listitem>
+      <para>envmap -- environment mapping.
+      </para>
+    </listitem>
+    <listitem>
+      <para>fakestar -- a fake star pattern.
+      </para>
+    </listitem>
+    <listitem>
+      <para>fbmbump -- fbm noise applied to surface normal.
+      </para>
+    </listitem>
+    <listitem>
+      <para>fbmcolor -- fbm noise applied to color.
+      </para>
+    </listitem>
+    <listitem>
+      <para>fire -- flames simulated with turbulence noise.
+      </para>
+    </listitem>
+    <listitem>
+      <para>glass -- Phong shader with values set to simulate glass.
+      </para>
+    </listitem>
+    <listitem>
+      <para>gravel -- turbulence noise applied to color and surface normal.
+      </para>
+    </listitem>
+    <listitem>
+      <para>light -- light source.
+      </para>
+    </listitem>
+    <listitem>
+      <para>marble -- marble texture.
+      </para>
+    </listitem>
+    <listitem>
+      <para>mirror -- Phong shader with values set to simulate mirror.
+      </para>
+    </listitem>
+    <listitem>
+      <para>plastic -- Phong shader with values set to simulate plastic.
+      </para>
+    </listitem>
+    <listitem>
+      <para>rtrans -- random transparency.
+      </para>
+    </listitem>
+    <listitem>
+      <para>scloud -- 3D cloud shader.
+      </para>
+    </listitem>
+    <listitem>
+      <para>spm -- spherical texture maps.
+      </para>
+    </listitem>
+    <listitem>
+      <para>stack -- allows stacking of shaders.
+      </para>
+    </listitem>
+    <listitem>
+      <para>stxt -- shape texture mapping.
+      </para>
+    </listitem>
+    <listitem>
+      <para>texture -- full color texture mapping.
+      </para>
+    </listitem>
+    <listitem>
+      <para>turbump -- turbulence noise applied to surface normals.
+      </para>
+    </listitem>
+    <listitem>
+      <para>turcolor -- turbulence noise applied to color.
+      </para>
+    </listitem>
+    <listitem>
+      <para>wood -- wood texture.
+      </para>
+    </listitem>
+  </itemizedlist>
+  </refsection>
 
-</refsection>
+  <refsection xml:id="matermappingdesc"><title>MAPPING MODE</title>
+  <para>
+    The <option>-m</option> mode of operation accepts a density file in the style of the <command>gqa</command> command
+    and uses that file (along with an optional mapping file that maps complex material names to names in the density
+    file) to assign <emphasis remap="B" role="bold">material_id</emphasis> properties to objects whose
+    <emphasis remap="B" role="bold">material_name</emphasis> attribute is defined in the density file (or, if
+    a mapping file is provided, the <emphasis remap="B" role="bold">material_name</emphasis> can be mapped to
+    a density file entry.)
+  </para>
+  <para>
+    A mapping file, if present, should consist of one mapping per line, with two quoted strings separated by a space.
+    The first name will be the original name, and the second will be the name that is found in the density file.
+  </para>
+  <para>
+    For situations where a file has <emphasis remap="B" role="bold">material_id</emphasis> attributes but no
+    names, the <option>--names-from-ids</option> option will accept a density file and assign
+    <emphasis remap="B" role="bold">material_name</emphasis> attributes to those objects whose
+    <emphasis remap="B" role="bold">material_id</emphasis> values are present in the density file.  It will
+    also update <emphasis remap="B" role="bold">material_name</emphasis> if it already exists on an object
+    but the object's <emphasis remap="B" role="bold">material_id</emphasis> value disagrees with the density file
+    definition.
+  </para>
+  </refsection>
 
-<refsection xml:id="examples"><title>EXAMPLES</title>
+  <refsection xml:id="examples"><title>EXAMPLES</title>
 
   <para>The example shows the use of the <command>mater</command> command to assign shader parameters, color, and inheritance to a region.
 
   </para>
   <example><title>Assigning shader parameters, color, and inheritance to a region.</title>
 
-    <variablelist>
-      <varlistentry>
-	   <term><prompt>mged&gt;</prompt> <userinput>mater region1 "plastic {tr 0.5 re 0.2}" 210 100 100 0		</userinput></term>
-	   <listitem>
-	     <para>Sets <emphasis>region1</emphasis> to use the plastic shader with 50% transparency, 20% 			reflectivity, a base color of (210 100 100), and inheritance set to 0.
-		     </para>
-	   </listitem>
-      </varlistentry>
-    </variablelist>
+  <variablelist>
+    <varlistentry>
+      <term><prompt>mged&gt;</prompt> <userinput>mater region1 "plastic {tr 0.5 re 0.2}" 210 100 100 0		</userinput></term>
+      <listitem>
+	<para>Sets <emphasis>region1</emphasis> to use the plastic shader with 50% transparency, 20% 			reflectivity, a base color of (210 100 100), and inheritance set to 0.
+	</para>
+      </listitem>
+    </varlistentry>
+  </variablelist>
+  </example>
+  
+  <para>The next two examples show the application of density and mapping files in <option>-m</option> mode.
+  </para>
+  <example><title>Names from IDs</title>
+  <variablelist>
+    <varlistentry>
+       <term><prompt>mged&gt;</prompt> <userinput>mater -m --names-from-ids /home/user/.density</userinput></term>
+       <listitem>
+	 <para>
+	   Assigns <emphasis remap="B" role="bold">material_name</emphasis> names from a density file assuming existing <emphasis remap="B" role="bold">material_id</emphasis> attributes.
+	 </para>
+      </listitem>
+    </varlistentry>
+  </variablelist>
+  </example>
+  
+  <example><title>IDs from Names</title>
+   <variablelist>
+    <varlistentry>
+      <term><prompt>mged&gt;</prompt> <userinput>mater -m /home/user/.density /home/user/mapping_file </userinput></term>
+      <listitem>
+	<para>
+	  Assigning or updating <emphasis remap="B" role="bold">material_id</emphasis> attributes based on <emphasis remap="B" role="bold">material_name</emphasis> attribute values, density file names, and mapping file associations.
+	</para>
+      </listitem>
+    </varlistentry>
+  </variablelist>
   </example>
 
+  
   </refsection>
 
-<refsection xml:id="author"><title>AUTHOR</title><para>BRL-CAD Team</para></refsection>
+  <refsection xml:id="author"><title>AUTHOR</title><para>BRL-CAD Team</para></refsection>
 
-<refsection xml:id="bug_reports"><title>BUG REPORTS</title>
+  <refsection xml:id="bug_reports"><title>BUG REPORTS</title>
 
   <para>
     Reports of bugs or problems should be submitted via electronic
     mail to <email>devs@brlcad.org</email>
   </para>
-</refsection>
+  </refsection>
 </refentry>
